<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="E_CalibrationStatus" Id="{9aa32893-c8b1-4f61-9ee9-7e22c3b32ab4}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'strict'}
TYPE E_CalibrationStatus :
(
	IDLE,
    PENDING,
    RUNNING,
    PASSED,
    FAILED,
    ADJUSTMENT_NEEDED,
	UNKNOWN
);
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>