<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="E_SolventType" Id="{81806b09-6c92-4d76-b571-daf8e941489e}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'strict'}
TYPE E_SolventType :
(
	Solvent1,
	Solvent2,
	Solvent3,
	Solvent4,
	Solvent5
);
END_TYPE]]></Declaration>
  </DUT>
</TcPlcObject>