<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="ST_RecipeSolventAndTimes" Id="{36f55ab5-292b-4191-90f5-508379c2db86}">
    <Declaration><![CDATA[TYPE ST_RecipeSolventAndTimes :
STRUCT
	//Solvent AND Times Group [1..4] |Rinse 1|Rinse 2|Wash 1| Wash 2| 
	aSolventN 			: ARRAY [1..4] OF USINT; //Solvent number to be used on Rinse 1 | Rinse 2 | Wash 1 | Wash 2 
	aTime 				: ARRAY [1..4] OF TIME;  //time in seconds for each step Rinse 1 | Rinse 2 | Wash 1 | Wash 2 
	aVelocity 			: ARRAY [1..4] OF INT; 	 //rpm number for each step Rinse 1 | Rinse 2 | Wash 1 | Wash 2 
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>